syntax = "proto3";
package ujds.record.v1;
option go_package = "github.com/ashep/ujds/sdk/proto/ujds/record/v1";

message Record {
  string id = 1;
  uint64 rev = 2;
  string index = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  int64 touched_at = 6;
  string data = 20;
}

message PushRequest {
  message Record {
    string index = 1;
    string id = 2;
    string data = 10;
  }

  repeated Record records = 2;
}

message PushResponse {}

message GetRequest {
  string index = 1;
  string id = 2;
}

message GetResponse {
  Record record = 1;
}

message FindRequest {
  string index = 1;
  string search = 2;
  int64 since = 3;
  uint32 limit = 4;
  uint64 cursor = 5;
  int64 not_touched_since = 6;
}

message FindResponse {
  uint64 cursor = 1;
  repeated Record records = 2;
}

message HistoryRequest {
  string index = 1;
  string id = 2;
  int64 since = 3;
  uint32 limit = 4;
  uint64 cursor = 5;
}

message HistoryResponse {
  uint64 cursor = 1;
  repeated Record records = 2;
}

service RecordService {
  rpc Push(PushRequest) returns (PushResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Find(FindRequest) returns (FindResponse) {}
  rpc History(HistoryRequest) returns (HistoryResponse) {}
}